feat: Integrate ExecAI Trust Stack with EPI Governance Framework
Major integration adding verifiable AI governance with cryptographic proof:

Trust Stack Backend:
- Event logger with cryptographic signatures (HMAC-SHA256)
- Merkle tree builder for daily event anchoring
- Attestation generator for compliance bundles
- Proof verifier for cryptographic verification
- JSON schemas for events and attestations

AI Agents with LLMs:
- CEO-AI: Strategic planning with Hugging Face models (Phi-3-mini)
- CFO-AI: Financial decision-making with EPI validation
- Both agents integrate with Trust Stack for decision logging
- Fallback reasoning when LLM unavailable

Dashboard Components:
- TrustPanel: Real-time trust status and badge display
- EPIMetrics: Detailed EPI breakdown with optimization
- AuditBrowser: Event log explorer with filtering
- TrustDashboard: Unified monitoring interface
- Tabs component for navigation

API Integration:
- 10 new Trust Stack endpoints in Flask API
- Event logging, proof generation, verification
- Daily Merkle anchoring
- Attestation generation
- Trust status monitoring

Deployment Scripts:
- deploy-testnet.sh: One-command testnet deployment
- deploy-production.sh: Production deployment with PostgreSQL, Nginx, SSL
- Automated database setup
- Smart contract deployment (Ethereum + Solana)
- Systemd service configuration

Documentation:
- TRUST_STACK_INTEGRATION.md: Complete integration guide
- README_TRUST_STACK.md: Quick start and feature overview
- full_stack_demo.py: Comprehensive example

Dependencies:
- Added transformers, torch for LLM support
- Added cryptography for Trust Stack
- Updated requirements.txt

This integration creates the first verifiable ethical AI governance
system with cryptographic proof, combining EPI constraints with
tamper-evident decision logging and Merkle tree verification.

--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,18 @@ mypy>=1.5.0
 black>=23.0.0
 isort>=5.12.0
 flake8>=6.1.0
+
+# Trust Stack Dependencies
+cryptography>=41.0.0
+hashlib  # built-in
+json  # built-in
+uuid  # built-in
+
+# AI/LLM Integration
+transformers>=4.35.0
+torch>=2.1.0
+sentencepiece>=0.1.99
+accelerate>=0.24.0
+
+# Optional: Hugging Face Hub
+huggingface-hub>=0.19.0
