--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# MicroAI DAO - Unified Python Dependencies
-# ==========================================
+# MicroAI DAO - Core Python Dependencies
+# ========================================
 
 # Web Framework
 Flask>=3.0.0
@@ -13,7 +13,7 @@ python-dotenv>=1.0.0
 numpy>=1.24.0
 pandas>=2.0.0
 
-# Machine Learning (for knowledge base)
+# Machine Learning (lightweight)
 scikit-learn>=1.3.0
 
 # Optimization (for EPI calculations)
@@ -30,6 +30,7 @@ aiohttp>=3.9.0
 # Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
 
 # Type Checking
 mypy>=1.5.0
@@ -41,15 +42,10 @@ flake8>=6.1.0
 
 # Trust Stack Dependencies
 cryptography>=41.0.0
-hashlib  # built-in
-json  # built-in
-uuid  # built-in
 
-# AI/LLM Integration
-transformers>=4.35.0
-torch>=2.1.0
-sentencepiece>=0.1.99
-accelerate>=0.24.0
-
-# Optional: Hugging Face Hub
-huggingface-hub>=0.19.0
+# AI/LLM Integration (optional - install separately if needed)
+# transformers>=4.35.0
+# torch>=2.1.0
+# sentencepiece>=0.1.99
+# accelerate>=0.24.0
+# huggingface-hub>=0.19.0
