--- a/requirements_security.txt
+++ b/requirements_security.txt
@@ -5,7 +5,6 @@ flask-limiter==3.5.0
 
 # Database
 flask-sqlalchemy==3.1.1
-sqlalchemy==2.0.23
 alembic==1.12.1
 psycopg2-binary==2.9.9  # PostgreSQL support
 
@@ -24,11 +23,5 @@ black==23.11.0
 flake8==6.1.0
 mypy==1.7.1
 
-# Existing requirements (keep all from original)
-numpy
-pandas
-transformers
-torch
-flask
-web3
-solana
+# Password hashing
+bcrypt>=4.0.0
